--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
     <h2>Teddy Bear</h2>
     <div id="teddy">
         <div id="cabeza">
+            <div id="oreja1">
+
+            </div>
+            <div id="oreja2">
+                
+            </div>
             <div id="ojo1">
 
             </div>
@@ -22,7 +28,7 @@
 
             </div>
             <div id="boca">
-                
+
             </div>
         </div>
         <div id="cuerpo">
