--- a/index.html
+++ b/index.html
@@ -4,25 +4,27 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="estilosF/styles.css">
+    <link rel="stylesheet" href="styles.css">
     <title>Document</title>
 </head>
 <body>
     <h1>Boris Andrés Cruz Parra</h1>
     <h2>Teddy Bear</h2>
     <div id="teddy">
+        <div id="oreja1">
+        </div>
+        <div id="oreja2">
+        </div>
         <div id="cabeza">
-            <div id="oreja1">
-
-            </div>
-            <div id="oreja2">
-                
-            </div>
             <div id="ojo1">
+                <div id="pupila1">
 
+                </div>
             </div>
             <div id="ojo2">
+                <div id="pupila2">
 
+                </div>
             </div>
             <div id="nariz">
 
@@ -32,9 +34,15 @@
             </div>
         </div>
         <div id="cuerpo">
+            <div id="mano1">
+
+            </div>
             <div id="panza">
 
             </div>
+            <div id="mano2"></div>
+            <div id="pata1"></div>
+            <div id="pata2"></div>
         </div>
     </div>
 </body>
