--- a/index.html
+++ b/index.html
@@ -2,47 +2,41 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <title>Document</title>
 </head>
 <body>
-    <h1>Boris Andrés Cruz Parra</h1>
-    <h2>Teddy Bear</h2>
-    <div id="teddy">
-        <div id="oreja1">
+    <h1>
+        Boris Andrés Cruz Parra CI: 13349018
+    </h1>
+    <br>
+    <div class="main">
+        <div id="box0">
+            <div class="cb1"></div>
+            <div class="cb1"></div>
+            <div class="cb1"></div>
+            <div class="cb1"></div>
         </div>
-        <div id="oreja2">
+        <div id="box1">
+            <div class="cb2"></div>
+            <div class="cb2"></div>
+            <div class="cb2"></div>
+            <div class="cb2"></div>
+            <div class="cb2"></div>
+            <div class="cb2"></div>
+            <div class="cb2"></div>
+            <div class="cb2"></div>
+            <div class="cb2"></div>
+            <div class="cb2"></div>
         </div>
-        <div id="cabeza">
-            <div id="ojo1">
-                <div id="pupila1">
-
-                </div>
-            </div>
-            <div id="ojo2">
-                <div id="pupila2">
-
-                </div>
-            </div>
-            <div id="nariz">
-
-            </div>
-            <div id="boca">
-
-            </div>
-        </div>
-        <div id="cuerpo">
-            <div id="mano1">
-
-            </div>
-            <div id="panza">
-
-            </div>
-            <div id="mano2"></div>
-            <div id="pata1"></div>
-            <div id="pata2"></div>
+        <div id="box2">
+            <div class="cb31"></div>
+            <div class="cb32"></div>
+            <div class="cb32"></div>
+            <div class="cb31"></div>
+            <div class="cb32"></div>
+            <div class="cd32"></div>
         </div>
     </div>
 </body>
